objects/maps__LiveIoTDevice__c.object
<CustomObject>
    <fields>
        <fullName>maps__DeviceId__c</fullName>
        <label>Device ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LastPositionAddress__c</fullName>
        <description>The physical address the device last reported from</description>
        <inlineHelpText>The physical address the device last reported from</inlineHelpText>
        <label>Last Position Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LastPositionDateTime__c</fullName>
        <inlineHelpText>Timestamp of last received Geo-location message.</inlineHelpText>
        <label>Last Position Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__LastPositionEventRaw__c</fullName>
        <label>Last Position Event (Raw)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LastPositionRaw__c</fullName>
        <description>This is the raw response for the last position request</description>
        <label>Last Position Raw</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__LastPositionUpdateDateTime__c</fullName>
        <inlineHelpText>Timestamp of this last position record updated by batch.</inlineHelpText>
        <label>Batch Date/Time of Last Position</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__LastReportedTimeZone__c</fullName>
        <label>Last Reported Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LatestDailySummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Daily Summary</label>
        <referenceTo>maps__LiveAssetDailySummary__c</referenceTo>
        <relationshipName>LiveIoTDevices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Location__c</fullName>
        <inlineHelpText>Geo-location of last position received.</inlineHelpText>
        <label>Last Position</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>maps__OdometerKm__c</fullName>
        <description>Last available odometer reading, in kilometers</description>
        <inlineHelpText>Last available odometer reading, in kilometers</inlineHelpText>
        <label>Odometer (km)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__OdometerMiles__c</fullName>
        <description>Last available odometer reading, in miles</description>
        <formula>ROUND(maps__OdometerKm__c * 0.62137, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Last available odometer reading, in miles</inlineHelpText>
        <label>Odometer (mi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LiveIoTDevices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__VINLastUpdated__c</fullName>
        <label>VIN Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__VIN__c</fullName>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Vendor__c</fullName>
        <label>Device Vendor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CalAmp</fullName>
                </value>
                <value>
                    <fullName>Geometris</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>MapAnything</fullName>
                    <label>Maps Live Tracking: Mobile</label>
                </value>
                <value>
                    <fullName>Geotab</fullName>
                    <default>true</default>
                    <label>Geotab</label>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Maps Live IoT Device</label>
    <nameField>
        <label>Maps Live IoT Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live IoT Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>